mentor and mentee welcome pages

--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -13,3 +13,7 @@
     border-color: #037f7d !important;
     background-color: #037f7d !important;
 }
+.custom-hover-button:hover {
+    background-color: blue; /* Bootstrap's primary color */
+    color: white; /* Text color changes for better visibility */
+  }
